# mistral-journal-finetune

./: .gitignore  Makefile  README.md  README.org  pyproject.toml  requirements.txt
data/: chat_dataset.jsonl  kv_dataset.jsonl  notes.jsonl  notes_validation.jsonl  random_math_operations_dataset.csv
scripts/: evaluate_math_operations.py  generate_chat_jsonl.py  generate_data.py  generate_jsonl.py  generate_langsmith_dataset.py  generate_llm_jsonl.py  qa_extractor.py  train.py
