[tool.poetry]
name = "mistral-journal-finetune"
version = "0.1.0"
description = "Fine-tuning Mistral on journal entries"
authors = ["Jason Walsh <j@wal.sh>"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.0"
click = "^8.0.0"
transformers = "^4.18.0"
datasets = "^2.0.0"
torch = "^1.9.0"
accelerate = "^0.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"
sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"