[tool.poetry]
name = "mistral-journal-finetune"
version = "0.1.0"
description = "Fine-tuning Mistral on journal entries"
authors = ["Jason Walsh <j@wal.sh>"]

[tool.poetry.dependencies]
python = "^3.11"
accelerate = {git = "https://github.com/huggingface/accelerate.git"}
bitsandbytes = "^0.41.1"
click = "^8.1.7"
datasets = "^2.14.5"
ipywidgets = "^8.1.1"
matplotlib = "^3.8.0"
openai = "^1.3.0"
peft = {git = "https://github.com/huggingface/peft.git"}
scipy = "^1.11.3"
torch = "^2.0.1"
transformers = {git = "https://github.com/huggingface/transformers.git"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"
sphinx = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"