[tool.poetry]
name = "mistral-journal-finetune"
version = "0.1.0"
description = "Fine-tuning Mistral on journal entries"
authors = ["Jason Walsh <j@wal.sh>"]

[tool.poetry.dependencies]
python = "^3.12"
accelerate = "^0.27.0"
bitsandbytes = "^0.42.0"
click = "^8.1.7"
datasets = "^2.16.0"
ipywidgets = "^8.1.3"
matplotlib = "^3.9.0"
openai = "^1.8.0"
peft = "^0.7.0"
scipy = "^1.12.0"
torch = "^2.2.0"
transformers = "^4.38.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.0"
sphinx = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"